# DataOgInfoProsjekt

./: README.md
Actix Web/: Cargo.toml
Actix Web/backend/: Cargo.toml
Actix Web/backend/src/: main.rs
Actix Web/frontend/: Cargo.toml  Trunk.toml  index.html
Actix Web/frontend/src/: #main.rs#  main.rs  main.rs~
Javascript/: package-lock.json  package.json  webpack.config.js
Javascript/public/: index.html
Javascript/src/: App.js  Chat.js  ChessBoard.js  ChessPieces.js  DefaultPiecesLayout.js
Rocket/YewPlusRocket/: Cargo.toml
Rocket/YewPlusRocket/login_page/: Cargo.toml  index.html  style.css
Rocket/YewPlusRocket/login_page/src/: main.rs
Rocket/YewPlusRocket/our_application/: Cargo.toml  Rocket.toml
Rocket/YewPlusRocket/our_application/src/: main.rs
Rocket/YewPlusRocket/our_application/src/templates/: template.html.tera  templateTwo.html.tera  wasm.html.tera
Rocket/YewPlusRocket/our_application/static/: Yew.js  Yew.wasm  a.css  asd.css  index.html  style-ad9c54a7c526dffd.css
Rocket/YewPlusRocket/our_application_wasm/: Cargo.toml  index.html  style.css
Rocket/YewPlusRocket/our_application_wasm/js/: Another.js
Rocket/YewPlusRocket/our_application_wasm/src/: js_func.rs  main.rs
