[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-web-lab = "^0"
actix = "0.13.0"
actix-files = "0.6.2"
actix-web-actors = "4.1.0"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "1.0.147"
serde_json = "1.0.87"
common = {path = "../common"}
