[package]
name = "our_application_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-utils = "0.1.5"
gloo = "0.8.0"
gloo-net = "0.2.4"
futures = "0.3.25"
yew = "0.19.3"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["HtmlInputElement", "DataTransfer", "Element", "HtmlImageElement"] }
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
yewtil = "0.4.0"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
common = {path = "../common" }