[package]
name = "login_page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-utils = "0.1.5"
gloo = "0.8.0"
gloo-net = "0.2.4"
yew = "0.19.3"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["HtmlInputElement", "DataTransfer", "Element", "HtmlImageElement"] }
js-sys = "0.3.60"