[package]
name = "our_application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde_json = "1.0.87"
serde = "1.0.147"
tokio-postgres = "0.7.7"
tokio = { version = "*", features = ["full"] }
tungstenite = "0.17.3"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]